# dendra

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-BSL  LICENSE.md  LICENSING.md  NOTICE  README.md  SECURITY.md  SUPPORT.md  TRADEMARKS.md  coverage_floors.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  REPO_METADATA.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: aggregator.yml  ci.yml  coverage-ratchet.yml  dco.yml  deploy-production.yml  deploy-staging.yml  install-smoke.yml  license-check.yml  refresh-llm-prices.yml  release.yml  security.yml  test.yml
brand/: accessibility.md  governance.md  messaging.md  motion.md  palette.md  sub-brands.md  typography.md  usage.md  voice.md
brand/logo/: _export.py  _generate_wordmarks.py  _preview.html  site.webmanifest
brand/templates/: dendra-preamble.tex  dendra.mplstyle  postrule-preamble.tex  postrule.mplstyle
cloud/aggregator/: run.py
cloud/api/: package-lock.json  package.json  tsconfig.json  vitest.config.mts  vitest.config.ts  wrangler.toml
cloud/collector/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
cloud/dashboard/: .env.example  .gitignore  README.md  SIGNIN_CONSENT_TODO.md  middleware.ts  package-lock.json  package.json  wrangler.toml
cloud/security-ops/: package-lock.json  package.json  vitest.config.mts  wrangler.toml
cloud/vscode-dendra/: .vscodeignore  README.md  package-lock.json  package.json
cloud/vscode-postrule/: README.md  package-lock.json  package.json  tsconfig.json
data/codelangs/: SOURCES.md
dendra/hypotheses/: _classify_lift_status.md  _classify_pattern.md
docs/: FAQ.md  THREAT_MODEL.md  api-reference.md  async.md  autoresearch.md  getting-started.md  index.md  limitations.md  scenarios.md  storage-backends.md  verdict-sources.md
docs/benchmarks/: perf-baselines-2026-05-01.md  slm-verifier-bench.json  slm-verifier-results.md  v1-audit-benchmarks.md  v1-baseline-2026-04-24.jsonl
docs/design/: multi-axis-gating.md
docs/integrations/: SKILL.md  github-action-template.yml
docs/legal/: access-policy.md  dpa-template.md  sub-processors.md  telemetry-shape.md
docs/marketing/: analyzer-dogfood-2026-04-22.md  business-model-and-moat.md  dendra-one-pager.md  design-partner-agreement.md  entry-with-end-in-mind.md  industry-applicability.md  landing-page-copy.md  launch-post-drafts.md  outreach-templates.md  pricing-deep-dive.md  vc-pitch-deck.md
docs/methodology/: tdpd-glossary.md  test-driven-product-development.md
docs/sample-reports/: README.md  _initial-analysis.md  _summary.md  output_safety_rule.md  severity_classifier.md  triage_rule.md
docs/working/: adapter-ecosystem.md  changelog-v1.0.0-draft.md  dendra-axiom-decoupling-policy.md  enterprise-licensing-tiers.md  externalization-boundary.md  feature-breaker-policies.md  feature-gate-protocol.md  feature-llm-comparison.md  feature-rule-from-model.md  internal-use-cases-scan-2026-04-20.md  launch-brand-asset-audit.md  launch-checklist-48hr.md  launch-day-runbook.md  launch-hn-post.md  launch-landing-page-wireframe.md  launch-linkedin-post.md  launch-repo-hygiene-triage.md  launch-reviewer-outreach.md  launch-talk-script.md  launch-x-thread.md  license-strategy.md  llm-as-teacher.md  multi-language-roadmap.md  operational-dx-design.md  patent-strategy.md  roadmap-2026-04-20.md  trademark-strategy.md  v1-audit-chaos.md  v1-audit-concurrency.md  v1-audit-features.md  v1-audit-performance.md  v1-audit-security.md  v1-audit-test-quality.md  v1-readiness.md  wasm-browser-strategy.md
examples/: 01_hello_world.py  02_outcome_log.py  03_safety_critical.py  04_llm_shadow.py  05_output_safety.py  06_ml_primary.py  07_llm_as_teacher.py  08_classify_vs_dispatch.py  09_verdict_webhook.py  10_bulk_verdict_ingestion.py  11_llm_judge.py  12_llm_committee.py  13_webhook_verdicts.py  14_human_reviewer_queue.py  15_async_fastapi.py  16_async_committee.py  17_exception_handling.py  18_system_defaults_tuning.py  19_autoresearch_loop.py  20_verifier_default.py  21_tournament.py  22_dry_run_evidence.py  23_drift_detection_workflow.py  24_when_auto_lift_refuses.py  25_native_switch_class.py  26_short_circuit_lifted.py  README.md  _stubs.py
examples/integrations/: README.md  axiom_local_lm.py  hermes_tool_use.py  langchain_triage.py  litellm_classify.py  llamaindex_router.py
landing/: README.md  _headers  brand-tokens.css  index.html  security.html  style.css
landing/data/: analyze-autogen.json  analyze-crewai.json  analyze-dspy.json  analyze-dvc.json  analyze-fastapi.json  analyze-haystack.json  (+8 more)
notes/: critic-assessments.md
scripts/: autoresearch_mlhead.py  bench_cifar10_image.py  build_browser_analyzer.py  check_integration_manifest.py  coverage_ratchet.py  enrich_landing_corpus.py  fetch_codelangs.py  profile_filestorage_4thread.py  reproduce.sh  run_slm_verifier_bench.py  run_v1_benchmarks.py  screenshot_landing.py  ship-check.sh  sizing_study.py  sync-stripe-products.ts  update_llm_prices.py
tests/: README.md  conftest.py  test_aggregator.py  test_analyzer.py  test_analyzer_hazards.py  test_async.py  test_auth.py  test_auto_record_and_verdict.py  test_autoresearch.py  test_autoresearch_mlhead.py  test_benchmark_loaders.py  test_benchmarks.py  test_bounded_storage.py  test_bulk_verdicts.py  test_bundled.py  test_cifar10_image_bench.py  test_cli.py  test_cli_login.py  test_cloud_registry.py  test_cloud_report.py  test_cloud_sync.py  test_cloud_team_corpus.py  test_cloud_verdict_telemetry.py  test_codelangs_loader.py  test_concurrency.py  test_core.py  test_coverage_ratchet.py  test_decorator.py  test_dispatch_across_phases.py  test_drift_demote.py  test_drift_detection.py  test_drift_gate.py  test_enrich_landing_corpus.py  test_examples_permutation.py  test_figure_4_data_contract.py  test_gates.py  test_head_strategy_plumbing.py  test_hoisted_config.py  test_image_rules.py  test_init_refresh_roundtrip.py  (+50 more)
(+1106 files in other folders)
