# Copyright (c) 2026 B-Tree Ventures, LLC
# SPDX-License-Identifier: Apache-2.0

[project]
name = "dendra"
version = "0.2.0"
description = "Graduated-autonomy classification primitive — start as a rule, graduate to ML when evidence justifies it."
readme = "README.md"
# Split license (PEP 639 SPDX expression). See LICENSE.md in the
# repo root for the full explanation; LICENSING.md is the
# developer-friendly version.
#
# - Client SDK (decorator, config, storage, adapters, telemetry,
#   viz, benchmarks) ships under Apache-2.0.
# - Dendra-operated components (analyzer, roi, research/graduation
#   tooling, cli) ship under Business Source License 1.1 with
#   Change Date 2030-05-01 and Change License Apache 2.0.
# Each source file declares its own license in its header.
license = "Apache-2.0 AND LicenseRef-BSL-1.1"
license-files = [
    "LICENSE-APACHE",
    "LICENSE-BSL",
    "LICENSE.md",
    "LICENSING.md",
    "NOTICE",
]
authors = [
    { name = "B-Tree Ventures, LLC" },
]
maintainers = [
    { name = "Benjamin Booth", email = "ben@b-treeventures.com" },
]
requires-python = ">=3.10"
dependencies = []
keywords = [
    "classification",
    "machine-learning",
    "llm",
    "rule-based",
    "safety-critical",
    "observability",
    "graduated-autonomy",
    "transition-curves",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    # License declared via PEP 639 SPDX expression in `license` above.
    # Classifier-based license declarations are omitted because the
    # project ships under a split Apache-2.0 / BSL-1.1 license and
    # no single classifier captures that accurately.
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
train = [
    "scikit-learn>=1.3",
]
onnx = [
    "onnxruntime>=1.16",
]
bench = [
    "datasets>=2.14",
]
viz = [
    "matplotlib>=3.7",
]
openai = [
    "openai>=1.0",
]
anthropic = [
    "anthropic>=0.18",
]
ollama = [
    "httpx>=0.24",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/axiom-labs-os/dendra"
Documentation = "https://github.com/axiom-labs-os/dendra#readme"
Issues = "https://github.com/axiom-labs-os/dendra/issues"

[project.scripts]
dendra = "dendra.cli:main"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dendra"]

[tool.hatch.build.targets.wheel.force-include]
"src/dendra/py.typed" = "dendra/py.typed"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers"
markers = [
    "benchmark: opt-in latency / throughput benchmarks (run with -m benchmark)",
    "concurrency: red-bar tests for thread-safety bugs (run with -m concurrency)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src/dendra"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/benchmarks/loaders.py",  # network-bound; covered by integration runs
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    # SIM105 (use contextlib.suppress instead of try/except/pass): the
    # telemetry-swallow idiom reads more clearly as try/except/pass and
    # communicates swallow-intent to reviewers.
    "SIM105",
]

[tool.ruff.lint.per-file-ignores]
# Tests may use assertions with long context, unused imports for fixtures.
"tests/*" = ["E501"]

# Pylint configuration lives in .pylintrc at the repo root (for broader
# editor compatibility — some pylint versions don't read pyproject.toml).
