# Copyright (c) 2026 B-Tree Labs
# SPDX-License-Identifier: Apache-2.0

[project]
name = "dendra"
version = "1.1.0"
description = "Graduated-autonomy classification primitive — start as a rule, graduate to ML when evidence justifies it."
readme = "README.md"
# Split license (PEP 639 SPDX expression). See LICENSE.md in the
# repo root for the full explanation; LICENSING.md is the
# developer-friendly version.
#
# - Client SDK (decorator, config, storage, adapters, telemetry,
#   viz, benchmarks) ships under Apache-2.0.
# - Dendra-operated components (analyzer, roi, research/graduation
#   tooling, cli) ship under Business Source License 1.1 with
#   Change Date 2030-05-01 and Change License Apache 2.0.
# Each source file declares its own license in its header.
license = "Apache-2.0 AND LicenseRef-BSL-1.1"
license-files = [
    "LICENSE-APACHE",
    "LICENSE-BSL",
    "LICENSE.md",
    "LICENSING.md",
    "NOTICE",
]
authors = [
    { name = "B-Tree Labs" },
]
maintainers = [
    { name = "Benjamin Booth", email = "ben@b-treeventures.com" },
]
requires-python = ">=3.10"
dependencies = [
    # `dendra.cloud.{sync,registry,team_corpus}` make HTTP calls to the
    # account/registry endpoints with `requests`. Hard dep because
    # `import dendra.cloud.*` would otherwise fail at import time.
    "requests>=2.28",
]
keywords = [
    "classification",
    "machine-learning",
    "llm",
    "rule-based",
    "safety-critical",
    "observability",
    "graduated-autonomy",
    "transition-curves",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    # License declared via PEP 639 SPDX expression in `license` above.
    # Classifier-based license declarations are omitted because the
    # project ships under a split Apache-2.0 / BSL-1.1 license and
    # no single classifier captures that accurately.
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.optional-dependencies]
license = [
    # Ed25519 verification for offline Business-tier license tokens.
    # See src/dendra/license.py.
    "cryptography>=42",
]
train = [
    "scikit-learn>=1.3",
]
onnx = [
    "onnxruntime>=1.16",
]
bench = [
    "datasets>=2.14",
]
viz = [
    "matplotlib>=3.7",
]
openai = [
    "openai>=1.0",
]
anthropic = [
    "anthropic>=0.18",
]
ollama = [
    "httpx>=0.24",
]
bundled = [
    # llama-cpp-python is the inference engine for the lazy-downloaded
    # GGUF defaults (qwen2.5:7b judge + gemma2:2b classifier). Pure-pip
    # with prebuilt wheels for macOS / Linux / Windows on common
    # platforms; falls back to compile-from-source on edge cases.
    "llama-cpp-python>=0.3",
]
mcp = [
    # Model Context Protocol server for `dendra mcp` — exposes the CLI
    # surface (analyze, init, refresh, doctor) as MCP tools so Claude
    # Code and other MCP-aware agents can drive Dendra in-process.
    "mcp>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "pytest-timeout>=2.1",
    "freezegun>=1.2",
    "ruff>=0.4",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://dendra.run"
Documentation = "https://github.com/b-tree-labs/dendra/tree/main/docs"
Repository = "https://github.com/b-tree-labs/dendra"
Issues = "https://github.com/b-tree-labs/dendra/issues"
Changelog = "https://github.com/b-tree-labs/dendra/blob/main/CHANGELOG.md"

[project.scripts]
dendra = "dendra.cli:main"

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dendra"]

[tool.hatch.build.targets.wheel.force-include]
"src/dendra/py.typed" = "dendra/py.typed"
# Bundle the runnable examples so `dendra quickstart` works offline and
# doesn't depend on the public GitHub repo being reachable. Only the
# .py files needed for the five quickstart presets ship in the wheel;
# the full examples/ tree (with markdown walkthroughs) lives in the repo.
"examples/01_hello_world.py" = "dendra/_examples/01_hello_world.py"
"examples/17_exception_handling.py" = "dendra/_examples/17_exception_handling.py"
"examples/19_autoresearch_loop.py" = "dendra/_examples/19_autoresearch_loop.py"
"examples/20_verifier_default.py" = "dendra/_examples/20_verifier_default.py"
"examples/21_tournament.py" = "dendra/_examples/21_tournament.py"
"examples/_stubs.py" = "dendra/_examples/_stubs.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --strict-markers -m 'not benchmark and not perf and not smoke'"
markers = [
    "benchmark: opt-in latency / throughput benchmarks (run with -m benchmark)",
    "concurrency: red-bar tests for thread-safety bugs (run with -m concurrency)",
    "redteam: adversarial / security tests (run with -m redteam). Enabled by default; opt-out with -m 'not redteam'",
    "chaos: failure-injection / pre-launch chaos tests (run by default; opt out with -m 'not chaos'). Surface every kill-us-in-prod failure mode.",
    "slow: tests that take >5s (combine with chaos marker for slow chaos tests)",
    "perf: v1 perf-regression suite under tests/perf/ — baselines committed at tests/perf/baselines/. Run explicitly with -m perf; refresh with --update-baselines.",
    "smoke: post-deploy smoke tests against running deployments (run with -m smoke + DENDRA_SMOKE_BASE_URL).",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    # Python 3.14 surfaces benign tempfile deallocation in urllib.error.HTTPError
    # GC paths as PytestUnraisableExceptionWarning. The exception value is None
    # (no actual error) so this is noise, not a real defect.
    "ignore:.*_TemporaryFileCloser.*:pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["src/dendra"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/benchmarks/loaders.py",  # network-bound; covered by integration runs
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
# Lifter fixture files are test inputs that intentionally reference
# unbound symbols (api, db, FEATURE_FLAGS, etc.) so the lifter has
# something realistic to parse. They're not meant to import or run.
extend-exclude = ["tests/lifter_fixtures/**"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    # SIM105 (use contextlib.suppress instead of try/except/pass): the
    # telemetry-swallow idiom reads more clearly as try/except/pass and
    # communicates swallow-intent to reviewers.
    "SIM105",
]

[tool.ruff.lint.per-file-ignores]
# Tests may use assertions with long context, unused imports for fixtures.
"tests/*" = ["E501"]
# Demo files for the auto-lift docs embed source-as-string with
# intentionally unbound names (api, FEATURE_FLAGS, etc.) so the demo
# can show what the lifter does without dragging in stub definitions
# that would distract from the load-bearing transform.
"examples/22_dry_run_evidence.py" = ["F821"]
"examples/24_when_auto_lift_refuses.py" = ["F821"]
"examples/26_short_circuit_lifted.py" = ["F821"]
# VS Code extension fixtures: intentionally-unbound names (`api`) so the
# fixture exercises analyzer hazard detection without stubs.
"cloud/vscode-dendra/src/test/fixtures/*.py" = ["F821"]

# Pylint configuration lives in .pylintrc at the repo root (for broader
# editor compatibility — some pylint versions don't read pyproject.toml).
